--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         ikadon modified
-@namespace    USO Archive
-@version      20230706.15.02
+@namespace    github.com/North-West-Wind/ikadon
+@version      1.5
 @description  "<div>Check out the original style at <a rel=\"nofollow\" href=\"https://userstyles.org/styles/141847\" target=\"_blank\">userstyles.org</a><br/></div>某イカゲームっぽいmastodonテーマ\r\n\r\n↓参考記事。インスタンスや、ikadonの説明がとてもわかりやすく記事になっています。\r\nhttps://mochi-pounding.com/video-game/splatoon/mastodon-of-splatoon". Modified by NorthWestWind.
 @author       hiyaudon, NorthWestWind
 @license      CC0-1.0
