fixed first column

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         ikadon modified
 @namespace    github.com/North-West-Wind/ikadon
-@version      1.6.2
+@version      1.6.3
 @description  "<div>Check out the original style at <a rel=\"nofollow\" href=\"https://userstyles.org/styles/141847\" target=\"_blank\">userstyles.org</a><br/></div>某イカゲームっぽいmastodonテーマ\r\n\r\n↓参考記事。インスタンスや、ikadonの説明がとてもわかりやすく記事になっています。\r\nhttps://mochi-pounding.com/video-game/splatoon/mastodon-of-splatoon". Modified by NorthWestWind.
 @author       hiyaudon, NorthWestWind
 @license      CC0-1.0
@@ -495,9 +495,7 @@
     
     .layout-multiple-columns.layout-multiple-columns .drawer.drawer .drawer__inner:not(.darker) {
         padding-top: 0;
-        margin: 15px;
-        border-radius: 15px;
-        width: calc(100% - 30px);
+        border-radius: 0;
     }
     
     .column {
